--- a/tests/index.html
+++ b/tests/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>QUnit Example</title>
+  <title>tarballjs</title>
   <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.4.0.css">
 </head>
 <body>
